<resources>
    <string name="app_name">Visit Nepal 2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon_clear_sky_day" translatable="false"></string>
    <string name="icon_clear_sky_night" translatable="false"></string>
    <string name="icon_few_clouds_day" translatable="false"></string>
    <string name="icon_few_clouds_night" translatable="false"></string>
    <string name="icon_scattered_clouds" translatable="false"></string>
    <string name="icon_broken_clouds" translatable="false"></string>
    <string name="icon_shower_rain" translatable="false"></string>
    <string name="icon_rain_day" translatable="false"></string>
    <string name="icon_rain_night" translatable="false"></string>
    <string name="icon_thunderstorm" translatable="false"></string>
    <string name="icon_snow" translatable="false"></string>
    <string name="icon_mist" translatable="false"></string>
    <string name="icon_weather_default" translatable="false"></string>
    <string name="icon_wind" translatable="false"></string>
    <string name="icon_humidity" translatable="false"></string>
    <string name="icon_barometer" translatable="false"></string>
    <string name="icon_cloudiness" translatable="false"></string>
    <string name="icon_sunrise" translatable="false"></string>
    <string name="icon_sunset" translatable="false"></string>
    <string name="percent_sign" translatable="false">\u0025</string>
    <string name="temperature_with_degree" translatable="false">%s\u00B0</string>
    <string name="pressure_measurement">hPa</string>
    <string name="wind_speed_meters">m/s</string>
    <string name="wind_speed_miles">mph</string>
    <string name="wind_label" translatable="false">Wind: %1$s %2$s</string>
    <string name="humidity_label" translatable="false">Humidity: %1$s%2$s</string>
    <string name="pressure_label" translatable="false">Pressure: %1$s %2$s</string>
    <string name="cloudiness_label" translatable="false">Cloudiness: %1$s%2$s</string>
    <string name="last_update_label" translatable="false">Last update: %s</string>
    <string name="sunrise_label" translatable="false">Sunrise: %s</string>
    <string name="sunset_label" translatable="false">Sunset: %s</string>
    <string name="permission_location_rationale">Location Permissions are needed to determine the current city</string>
    <string name="permission_not_granted">Permissions were not granted!</string>
    <string name="permission_available_location">Location Permissions have been granted</string>
    <string name="connection_not_found">Check your internet connection</string>
    <string name="toast_parse_error">An error has occurred. Try later!</string>
    <string name="alertDialog_gps_title" translatable="false">GPS is settings</string>
    <string name="alertDialog_gps_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="alertDialog_gps_positiveButton">Settings</string>
    <string name="alertDialog_gps_negativeButton">Cancel</string>
    <string name="progressDialog_gps_locate">Find current location</string>
    <string-array name="pref_temperature_entries" translatable="false">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string name="no_desc_available">No description available</string>
    <string name="more_details">More Details</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="mysore_palace_hours">10:00 am - 05:30 pm</string>
    <string name="venugopalaswamy_temple_hours">08:30 am - 04:30 pm</string>
    <string name="grs_hours">10:30 am - 07:00 pm</string>
    <string name="krs_hours">06:30 am - 07:30 pm</string>
    <string name="bylakuppe_hours">09:00 am - 06:00 pm</string>
    <string name="ranganthittu_hours">09:00 am - 06:00 pm</string>
    <string name="mysore_palace_location">Mysore+Palace</string>
    <string name="venugopalaswamy_temple_location">Venugopala+Swamy+Temple</string>
    <string name="grs_location">GRS+Fantasy+Park</string>
    <string name="krs_location">KrishnaRajaSagara+Dam,+Karnataka+571607</string>
    <string name="bylakuppe_location">Namdroling+Monastery+Golden+Temple</string>
    <string name="ranganthittu_location">Ranganathittu+Bird+Sanctuary</string>
    <string name="onesta_location">Onesta</string>
    <string name="hotel_mylari_location">Hotel+Vinayaka+Original+Mylari</string>
    <string name="the_barge_location">The+Barge</string>
    <string name="la_uppu_location">Grand+Mercure+Mysuru</string>
    <string name="old_house_location">The+Old+House</string>
    <string name="frosting_cafe_location">Frosting+cafe</string>
    <string name="good_vibes_location">Cafe+Good+Vibes</string>
    <string name="indra_cafe_location">Indra+Cafe+Paras+-+Vegetarian+Restaurant</string>
    <string name="indra_cafe_website">http://indracafeparas.com</string>
    <string name="good_vibes_website" />
    <string name="frosting_cafe_website" />
    <string name="old_house_website" />
    <string name="la_uppu_website">https://www.accorhotels.com/gb/hotel-9306-grand-mercure-mysuru-/index.shtml</string>
    <string name="the_barge_website">http://thebarge.in</string>
    <string name="hotel_mylari_website" />
    <string name="onesta_website">http://onestalove.com</string>
    <string name="onesta_phone">08214851479</string>
    <string name="hotel_mylari_phone" />
    <string name="indra_cafe_phone">08212420236</string>
    <string name="the_barge_phone">09741391444</string>
    <string name="la_uppu_phone">08214021212</string>
    <string name="old_house_phone">08212333255</string>
    <string name="frosting_cafe_phone">07022330059</string>
    <string name="good_vibes_phone">08212978124</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="cafe">Cafe</string>
    <string name="gokulam">Gokulam</string>
    <string name="doora">Doora</string>
    <string name="vijaynagar">Vijaynagar</string>
    <string name="bannimantap">Bannimantap</string>
    <string name="chamrajpura">Chamrajpura</string>
    <string name="reviewCount">(%1$s)</string>
    <string name="navikotsava">Navikotsava</string>
    <string name="live_music">Live Music: Between green &amp; me</string>
    <string name="pratigam">Pratigam 2018</string>
    <string name="janmashtami">Sri Krishna Janmashtami</string>
    <string name="marathon">Celebration Mysore &#189; Marathon &amp; 10k</string>
    <string name="navikotsava_place">Kalamandira</string>
    <string name="live_music_place">Cornucopia</string>
    <string name="pratigam_place">SDMIMD</string>
    <string name="janmashtami_place">ISKCON</string>
    <string name="marathon_place">Mysore Palace</string>
    <string name="navikotsava_date">4th Aug</string>
    <string name="live_music_date">4th Aug</string>
    <string name="pratigam_date">18th Aug</string>
    <string name="janmashtami_date">3rd Sept</string>
    <string name="marathon_date">9th Sept</string>
    <string name="navikotsava_time">10:30 am</string>
    <string name="live_music_time">7:00 pm - 10:30 pm</string>
    <string name="pratigam_time">4:00 pm - 9:00 pm</string>
    <string name="janmashtami_time">7:00 am - 12:45 pm</string>
    <string name="marathon_time">5:30 am</string>
    <string name="navikotsava_url">http://www.masthmysore.com/events/navikotsava-2018/</string>
    <string name="live_music_url">http://www.masthmysore.com/events/live-music-green/</string>
    <string name="pratigam_url">http://www.masthmysore.com/events/pratigam-2018/</string>
    <string name="janmashtami_url">http://www.masthmysore.com/events/sri-krishna-janmashtami/</string>
    <string name="marathon_url">http://www.masthmysore.com/events/celebration-mysore-12-marathon-10k/</string>
    <string name="no_phone">Phone number not found.</string>
    <string name="no_website">Website not found.</string>
    <string name="no_location">Unable to locate on the maps.</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Montes nascetur ridiculus mus mauris. Venenatis tellus in metus vulputate eu scelerisque. Urna duis convallis tellus id interdum.\n\nSagittis id consectetur purus ut faucibus pulvinar elementum integer. Eu mi bibendum neque egestas congue quisque egestas diam. Facilisi cras fermentum odio eu feugiat pretium. Sed tempus urna et pharetra pharetra massa. Semper quis lectus nulla at volutpat diam ut venenatis tellus. Mauris pharetra et ultrices neque ornare aenean.</string>
    <string name="image">image</string>
    <string-array name="placeTitle">
        <item>Kathmandu City</item>
        <item>Pokhara</item>
        <item>Lumbini</item>
        <item>Illam</item>
        <item>Annapurna Base Camp</item>
        <item>Mustang</item>
    </string-array>
    <string-array name="placeHours">
        <item>@string/mysore_palace_hours</item>
        <item>@string/venugopalaswamy_temple_hours</item>
        <item>@string/grs_hours</item>
        <item>@string/krs_hours</item>
        <item>@string/bylakuppe_hours</item>
        <item>@string/ranganthittu_hours</item>
    </string-array>
    <string-array name="placeLocation">
        <item>@string/mysore_palace_location</item>
        <item>@string/venugopalaswamy_temple_location</item>
        <item>@string/grs_location</item>
        <item>@string/krs_location</item>
        <item>@string/bylakuppe_location</item>
        <item>@string/ranganthittu_location</item>
    </string-array>
    <string-array name="restaurant_name">
        <item>Daddys Kitchen</item>
        <item>Toran Restaurant</item>
        <item>Krishnarpan Restaurant</item>
        <item>Upstairs Cafe</item>
        <item>Yala Cafe</item>
        <item>Fusion Himalaya Restaurant</item>
        <item>Hity Cafe</item>
        <item>MarcoPolo Restaurant</item>
    </string-array>
    <string-array name="restaurant_type">
        <item>@string/italian</item>
        <item>@string/indian</item>
        <item>@string/chinese</item>
        <item>@string/indian</item>
        <item>@string/italian</item>
        <item>@string/cafe</item>
        <item>@string/italian</item>
        <item>@string/indian</item>
    </string-array>
    <string-array name="restaurant_place">
        <item>@string/gokulam</item>
        <item>@string/doora</item>
        <item>@string/vijaynagar</item>
        <item>@string/bannimantap</item>
        <item>@string/chamrajpura</item>
        <item>@string/gokulam</item>
        <item>@string/chamrajpura</item>
        <item>@string/chamrajpura</item>
    </string-array>
    <string-array name="restaurant_location">
        <item>@string/onesta_location</item>
        <item>@string/hotel_mylari_location</item>
        <item>@string/the_barge_location</item>
        <item>@string/la_uppu_location</item>
        <item>@string/old_house_location</item>
        <item>@string/frosting_cafe_location</item>
        <item>@string/good_vibes_location</item>
        <item>@string/indra_cafe_location</item>
    </string-array>
    <string-array name="restaurant_phone">
        <item>@string/onesta_phone</item>
        <item>@string/hotel_mylari_phone</item>
        <item>@string/the_barge_phone</item>
        <item>@string/la_uppu_phone</item>
        <item>@string/old_house_phone</item>
        <item>@string/frosting_cafe_phone</item>
        <item>@string/good_vibes_phone</item>
        <item>@string/indra_cafe_phone</item>
    </string-array>
</resources>